--- a/poll_app/templates/index.html
+++ b/poll_app/templates/index.html
@@ -1,4 +1,6 @@
 {% extends "base.html" %}
 {% block body %}
 <h1> Home Page </h1>
+<a href="/login">Login</a><br>
+<a href="/signup">Sign Up</a>
 {% endblock %}
