--- a/poll_app/templates/signup.html
+++ b/poll_app/templates/signup.html
@@ -1,4 +1,11 @@
 {% extends "base.html" %}
 {% block body %}
 <h1> Sign Up Page </h1>
+<form action="/signup" method="post">
+    <label for="email">Email Id:</label><br>
+    <input type="email" id="email" name="email" placeholder="John@example.com"><br>
+    <label for="password">Create Password:</label><br>
+    <input type="password" id="password" name="password"><br>
+    <input type="submit" value="Submit">
+</form> 
 {% endblock %}
