--- a/poll_app/app/templates/index.html
+++ b/poll_app/app/templates/index.html
@@ -1,6 +1,11 @@
 {% extends "base.html" %}
 {% block body %}
-<h1> Home Page </h1>
-<a href="/login">Login</a><br>
-<a href="/signup">Sign Up</a>
+<div class="container text-center mt-5">
+    <h1 class="display-4">Welcome to Audience Poll</h1>
+    <p class="lead">Create polls, gather opinions, and make informed decisions with collective input!</p>
+    <div class="mt-4">
+        <a href="{{ url_for('login') }}" class="btn btn-primary me-2">Login</a>
+        <a href="{{ url_for('signup') }}" class="btn btn-success">Sign Up</a>
+    </div>
+</div>
 {% endblock %}
