--- a/poll_app/app/templates/login.html
+++ b/poll_app/app/templates/login.html
@@ -1,11 +1,12 @@
 {% extends "base.html" %}
 {% block body %}
 <h1> Login Page </h1>
-<form action="/login" method="post">
+<form action="{{url_for('login')}}" method="post">
     <label for="email">Email Id:</label><br>
     <input type="email" id="email" name="email" placeholder="John@example.com"><br>
     <label for="password">Password:</label><br>
     <input type="password" id="password" name="password"><br>
     <input type="submit" value="Submit">
 </form> 
+<small>Don't have an account? <a href="{{ url_for('signup') }}">Sign Up</a></small>
 {% endblock %}
