--- a/poll_app/app/templates/signup.html
+++ b/poll_app/app/templates/signup.html
@@ -1,11 +1,12 @@
 {% extends "base.html" %}
 {% block body %}
 <h1> Sign Up Page </h1>
-<form action="/signup" method="post">
+<form action="{{url_for('signup')}}" method="post">
     <label for="email">Email Id:</label><br>
     <input type="email" id="email" name="email" placeholder="John@example.com"><br>
     <label for="password">Create Password:</label><br>
     <input type="password" id="password" name="password"><br>
     <input type="submit" value="Submit">
 </form> 
+<small>Already have an account? <a href="{{ url_for('login') }}">Login</a></small>
 {% endblock %}
