--- a/poll_app/app/templates/base.html
+++ b/poll_app/app/templates/base.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Audience Poll</title>
+    <title>Welcome to Poll-Me</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 </head>
 
