--- a/poll_app/app/templates/index.html
+++ b/poll_app/app/templates/index.html
@@ -1,11 +1,25 @@
 {% extends "base.html" %}
 {% block body %}
-<div class="container text-center mt-5">
-    <h1 class="display-4">Welcome to Audience Poll</h1>
-    <p class="lead">Create polls, gather opinions, and make informed decisions with collective input!</p>
-    <div class="mt-4">
-        <a href="{{ url_for('login') }}" class="btn btn-primary me-2">Login</a>
-        <a href="{{ url_for('signup') }}" class="btn btn-success">Sign Up</a>
-    </div>
-</div>
+<link rel="stylesheet" href="{{ url_for('static', filename='login-signup.css') }}" type="text/css"/>
+ <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" />
+<div class="wrapper">
+	<h1 class="title">Login to Poll-Me</h1>
+    <p class="desc" style="padding-top: 10px;">Create polls, Gather opinions, Make informed decisions with</p>
+	<p class="desc">Collective Input!</p>
+    <form action="{{url_for('login')}}" method="POST">
+      <div class="row">
+        <i class="fas fa-user"></i>
+        <input type="email" id="email" name="email" placeholder="Email ID" required />
+      </div>
+      <div class="row">
+        <i class="fas fa-lock"></i>
+        <input type="password" id="password" name="password" placeholder="Password" required />
+      </div>
+      <!--<div class="pass"><a href="#">Forgot password?</a></div>-->
+      <div class="row button">
+        <input type="submit" value="Login" />
+      </div>
+      <div class="signup-login-link">Not a member? <a href="{{ url_for('signup') }}">Signup now</a></div>
+    </form>
+  </div>
 {% endblock %}
