--- a/poll_app/app/templates/base.html
+++ b/poll_app/app/templates/base.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Welcome to Poll-Me</title>
+    <title>Audience Poll</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 </head>
 
@@ -10,5 +10,5 @@
     {% block body %} {% endblock %}
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-
+{% block script %} {% endblock %}
 </html>
