--- a/poll_app/app/templates/poll.html
+++ b/poll_app/app/templates/poll.html
@@ -29,13 +29,13 @@
 &ensp;Home</a>
 </header>
 <br>
-  <h2> {{poll.title}} </h2>
-  <p>{{ poll.description }}</p>
+  <h2 style="cursor: default;"> {{poll.title}} </h2>
+  <p style="cursor: default;">{{ poll.description }}</p>
   <div class="poll-area">
    <form action="{{ url_for('results', poll_id=poll.id) }}" method="POST">
     {% for option in poll.options %}
-        <div style="border: 2px solid #e6e6e6; margin-bottom:10px;" onclick="selectOption('{{ option.text }}')">
-            <input style="margin-left:10px;accent-color:grey;" type="radio" id="{{ option.id }}" name="selected_option" value="{{ option.id }}" required>
+        <div class="poll-options" style="border: 2px solid #e6e6e6; margin-bottom:10px;cursor: pointer;" onclick="selectOption('{{ option.text }}')">
+            <input style="margin-left:10px;accent-color:grey;cursor: pointer;" type="radio" id="{{ option.id }}" name="selected_option" value="{{ option.id }}" required>
 			<label for="{{ option.id }}">{{ option.text }}</label>
         </div>
     {% endfor %}
