--- a/poll_app/app/templates/poll_results.html
+++ b/poll_app/app/templates/poll_results.html
@@ -1,16 +1,25 @@
 {% extends "base.html" %}
 {% block body %}
+<div class="wrapper">
 <header>
-    <a href="{{ url_for('home') }}" class="button">Home</a>
+    <a href="{{ url_for('home') }}" class="button">
+        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-bar-left" viewBox="0 0 16 16">
+            <path fill-rule="evenodd" d="M12.5 15a.5.5 0 0 1-.5-.5v-13a.5.5 0 0 1 1 0v13a.5.5 0 0 1-.5.5M10 8a.5.5 0 0 1-.5.5H3.707l2.147 2.146a.5.5 0 0 1-.708.708l-3-3a.5.5 0 0 1 0-.708l3-3a.5.5 0 1 1 .708.708L3.707 7.5H9.5a.5.5 0 0 1 .5.5"/>
+          </svg>
+          &ensp;Home</a>
 </header>
-<h5> {{poll.title}}</h5>
-<p>{{ poll.description }}</p>
+<br>
+<link rel="stylesheet" href="{{ url_for('static', filename='poll.css') }}" type="text/css"/>
+<h2 style="text-align:center;cursor: default;"> {{poll.title}}</h2>
+<p style="text-align:center;cursor: default;">{{ poll.description }}</p>
+<br>
+<div class="poll-area">
 <table class="table">
     <tr>
         <th>Option</th>
-        <th>Fill</th>
-        <th>Count</th>
-        <th>%</th>
+        <th>Progress</th>
+        <th>No. of Votes</th>
+        <th>Vote Share</th>
     </tr>
     {% for option in poll.options %}
     <tr>
@@ -20,11 +29,14 @@
         {% set value = ((option.vote_count * 10000) // poll.vote_count) / 100 %}
         {% endif%}
         <td>{{option.text}}</td>
-        <td><progress id="{{option.id}}" value="{{ value }}" max=100></progress></td>
+        <td><progress style="accent-color:#50B7CB;" id="{{option.id}}" value="{{ value }}" max=100></progress></td>
         <td>{{option.vote_count}}</td>
         <td>{{value}} %</td>
     </tr>
     {% endfor %}
 </table>
-<small>Total Votes: {{poll.vote_count}}</small>
+<br>
+<h5 style="text-align: center;cursor: default;">Total Votes: <p class="vote-count">{{poll.vote_count}}</p></h5>
+</div>
+</div>
 {% endblock %}
