--- a/poll_app/app/templates/home.html
+++ b/poll_app/app/templates/home.html
@@ -5,8 +5,8 @@
     <ul>
         <li><a class="active" href="{{ url_for('home') }}">Home</a></li>
         <li><a href="{{ url_for('create_poll') }}">Create New Poll</a></li>
-        <li><a href="#">My Polls</a></li>
-        <li><a href="#">My Voting History</a></li>
+        <li><a href="{{url_for('my_polls')}}">My Polls</a></li>
+        <li><a href="{{url_for('my_votes')}}">My Voting History</a></li>
         <li style="float:right" class="user">
             <img onclick="toggleSidebar()" style="float:right" src="{{ url_for('static', filename='user.jpg')}}" height="50" width="50">
         </li>
@@ -28,24 +28,7 @@
 </nav>
 <br>
 <div class="wrapper">
-    <h2 class="welcome">Welcome <i class="username">{{user.email}}</i></h2><br>
-    <h4 class="caption" style="cursor: default;"><i>Your voice matters, Cast your vote now! Click on the polls below to make your choice count</i>
-    <img src="{{ url_for('static', filename='vote.png')}}" height="50" width="50"></h4>
-    <table class="table">
-        <tr>
-            <th scope="col"> Poll Name </th>
-            <th scope="col"> Votes </th>
-            <th scope="col"> Author </th>
-            <th scope="col"> Created Date </th>
-        </tr>
-        {% for poll in polls %}
-        <tr>
-            <td><a href="{{ url_for('poll', poll_id=poll.id) }}">{{ poll.title }}</a></td>
-            <td>{{ poll.vote_count}}</td>
-            <td>{{ poll.creator_username}} </td>
-            <td>{{ poll.created_at.strftime('%B %d, %Y at %I:%M %p')}} </td>
-        </tr>
-        {% endfor %}
-    </table>
+    {% block wrapper %}
+    {% endblock %}
 </div>
 {% endblock %}
