--- a/poll_app/app/static/poll.css
+++ b/poll_app/app/static/poll.css
@@ -1,38 +1,45 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
-*{
+
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
 }
-body{
+
+body {
   display: flex;
   align-items: center;
   justify-content: center;
   min-height: 100vh;
   background: url('https://w0.peakpx.com/wallpaper/705/681/HD-wallpaper-pastel-color-colorful-colour-colourful-light-rainbow.jpg');
 }
-::selection{
+
+::selection {
   color: #fff;
   background: #50B7CB;
 }
-.wrapper{
+
+.wrapper {
   background: #fff;
   border-radius: 15px;
   padding: 25px;
   margin-left: 30px;
   margin-right: 30px;
   width: 100%;
-  box-shadow: 0px 5px 10px rgba(0,0,0,0.1);
+  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.1);
 }
-.wrapper header{
+
+.wrapper header {
   font-size: 22px;
   font-weight: 600;
 }
-.wrapper .poll-area{
+
+.wrapper .poll-area {
   margin: 20px 0 15px 0;
 }
-.poll-area label{
+
+.poll-area label {
   display: inline-block;
   margin-bottom: 10px;
   border-radius: 5px;
@@ -40,23 +47,28 @@ body{
   transition: all 0.2s ease;
   cursor: pointer;
 }
-.poll-options:hover{
+
+.poll-options:hover {
   background-color: #f4f4f4;
 }
-div.selected{
-  border-color: #50B7CB!important;
+
+div.selected {
+  border-color: #50B7CB !important;
   background-color: #f4f4f4;
 }
-div .row{
+
+div .row {
   display: flex;
   pointer-events: none;
   justify-content: space-between;
 }
-div .row .column{
+
+div .row .column {
   display: flex;
   align-items: center;
 }
-div .row .circle{
+
+div .row .circle {
   height: 19px;
   width: 19px;
   display: block;
@@ -65,10 +77,12 @@ div .row .circle{
   margin-right: 10px;
   position: relative;
 }
-div.selected .row .circle{
+
+div.selected .row .circle {
   border-color: #50B7CB;
 }
-div .row .circle::after{
+
+div .row .circle::after {
   content: "";
   height: 11px;
   width: 11px;
@@ -79,15 +93,18 @@ div .row .circle::after{
   top: 2px;
   display: none;
 }
-.poll-area div:hover .row .circle::after{
+
+.poll-area div:hover .row .circle::after {
   display: block;
   background: #50B7CB;
 }
-div.selected .row .circle::after{
+
+div.selected .row .circle::after {
   display: block;
-  background: #50B7CB!important;
+  background: #50B7CB !important;
 }
-div .row span{
+
+div .row span {
   font-size: 16px;
   font-weight: 500;
 }
@@ -103,15 +120,16 @@ div .row span{
 }
 
 .vote-count {
-  padding: 3px;
-  font-size:30px;
-  display:inline;
-  background-color:#50B7CB;
-  color: white;
-  cursor: default;
-  border-radius: 5px;
+  /* padding: 3px;
+  font-size:30px; */
+  display: inline;
+  /* background-color:#50B7CB; */
+  color: #50B7CB;
+  /* cursor: default; */
+  /* border-radius: 5px; */
 }
 
-th, td {
+th,
+td {
   cursor: default;
 }
