--- a/poll_app/app/templates/home.html
+++ b/poll_app/app/templates/home.html
@@ -4,19 +4,19 @@
 <nav>
     <ul>
         <li><a class="active" href="{{ url_for('home') }}">Home</a></li>
-        <li><a href="{{ url_for('create_poll') }}">Create New Poll</a></li>
         <li><a href="{{url_for('my_polls')}}">My Polls</a></li>
         <li><a href="{{url_for('my_votes')}}">My Voting History</a></li>
+        <li><a href="{{ url_for('create_poll') }}">Create New Poll</a></li>
         <li style="float:right" class="user">
             <img onclick="toggleSidebar()" style="float:right" src="{{ url_for('static', filename='user.jpg')}}" height="50" width="50">
         </li>
     </ul>
-
+    
     <div id="sidebar" class="sidebar">
         <a href="javascript:void(0)" class="close-btn" onclick="toggleSidebar()">&times;</a>
+        <a href="{{url_for('my_polls')}}">My Polls</a>
+        <a href="{{url_for('my_votes')}}">My Voting History</a>
         <a href="{{ url_for('create_poll') }}">Create New Poll</a>
-        <a href="#">My Polls</a>
-        <a href="#">My Voting History</a>
         <a href="{{url_for('logout')}}">Log Out</a>
     </div>
     <script>
@@ -28,6 +28,7 @@
 </nav>
 <br>
 <div class="wrapper">
+    <h4 class="welcome">Welcome <i class="username">{{user.email}}</i></h4>
     {% block wrapper %}
     {% endblock %}
 </div>
