--- a/poll_app/app/templates/home.html
+++ b/poll_app/app/templates/home.html
@@ -18,6 +18,8 @@
         <a href="{{url_for('my_votes')}}">My Voting History</a>
         <a href="{{ url_for('create_poll') }}">Create New Poll</a>
         <a href="{{url_for('logout')}}">Log Out</a>
+        <hr>
+        <a class="text-danger" href="{{url_for('delete_account')}}"> Delete Account </a>
     </div>
     <script>
         function toggleSidebar() {
