--- a/poll_app/app/templates/home.html
+++ b/poll_app/app/templates/home.html
@@ -7,6 +7,9 @@
         <li><a id="poll" href="{{url_for('my_polls')}}">My Polls</a></li>
         <li><a id="history" href="{{url_for('my_votes')}}">My Voting History</a></li>
         <li><a href="{{ url_for('create_poll') }}">Create New Poll</a></li>
+        {% if user.is_admin %}
+            <li><a href="{{ url_for('admin_users') }}">Admin Panel</a></li>
+        {% endif %}
         <li style="float:right" class="user">
             <img onclick="toggleSidebar()" style="float:right" src="{{ url_for('static', filename='user.jpg')}}" height="50" width="50">
         </li>
@@ -17,6 +20,9 @@
         <a href="{{url_for('my_polls')}}">My Polls</a>
         <a href="{{url_for('my_votes')}}">My Voting History</a>
         <a href="{{ url_for('create_poll') }}">Create New Poll</a>
+        {% if user.is_admin %}
+            <li><a href="{{ url_for('admin_users') }}">Admin Panel</a></li>
+        {% endif %}
         <a href="{{url_for('logout')}}">Log Out</a>
         <hr>
         <a class="text-danger" href="{{url_for('delete_account')}}"> Delete Account </a>
