--- a/poll_app/app/templates/poll.html
+++ b/poll_app/app/templates/poll.html
@@ -41,7 +41,7 @@
     {% endfor %}
 	<br>
 	<div class="button-div">
-    <button type="submit" class="button btn btn-info"">Submit Vote</button>
+    <button type="submit" class="button btn btn-info">Submit Vote</button>
 	</div>
    </form>
   </div>
