--- a/poll_app/app/templates/admin_home.html
+++ b/poll_app/app/templates/admin_home.html
@@ -6,7 +6,7 @@
     <li><a id="home" href="{{ url_for('home') }}">Home</a></li>
     <li><a id="users" href="{{ url_for('admin_users') }}">Users</a></li>
     <li><a id="polls" href="{{ url_for('admin_polls') }}">Polls</a></li>
-    <li style="float:right" class="user">
+    <li style="cursor: pointer;float:right" class="user">
         <img onclick="toggleSidebar()" style="float:right" src="{{ url_for('static', filename='user.jpg')}}" height="50" width="50">
     </li>
 </ul>
@@ -17,7 +17,7 @@
     <a href="{{url_for('my_votes')}}">My Voting History</a>
     <a href="{{ url_for('create_poll') }}">Create New Poll</a>
     {% if user.is_admin %}
-        <li><a href="{{ url_for('admin_polls') }}">Admin Panel</a></li>
+    <a href="{{ url_for('admin_polls') }}">Admin Panel</a>
     {% endif %}
     <a href="{{url_for('logout')}}">Log Out</a>
     <hr>
