Remove logger-codeblock

--- a/poll_app/app/templates/create_poll.html
+++ b/poll_app/app/templates/create_poll.html
@@ -38,7 +38,7 @@
             </div>
 
     <div class="button-div">
-        <button type="submit" onclick="send()" class="button btn btn-info">Create Poll</button>
+        <button type="submit" class="button btn btn-info">Create Poll</button>
     </div>
   </form>
 </div>
@@ -85,10 +85,6 @@
                 document.getElementById("add-option-btn").disabled = false;
             }
         }
-    }
-
-    function send() {
-        console.log("Hello....");
     }
 </script>
 {% endblock %}
