--- a/poll_app/app/templates/signup.html
+++ b/poll_app/app/templates/signup.html
@@ -33,6 +33,19 @@ const togglePassword = document.querySelector(".password-toggle-icon");
 		<i onclick="togglePassword()" style="position: absolute;right: 0.5px;top: 50%;transform: translateY(-50%);cursor: pointer;color: grey;background: none;border: none;"
 		class="pass-eye password-toggle-icon fas fa-eye-slash"></i>
       </div>
+      <div class="row">
+        <label for="gender">gender:</label>
+        <select name="gender" id="gender" required>
+          <option value="">Select Gender</option>
+          <option value="male">Male</option>
+          <option value="female">Female</option>
+          <option value="other">Other</option>
+        </select>
+      </div>
+      <div class ="row">
+        <label for="age">Age (Years):</label>
+        <input type="number" id="age" name="age" min="12" max="120" required>
+      </div>
       <!--<div class="pass"><a href="#">Forgot password?</a></div>-->
       <div class="row button">
         <input type="submit" value="Register" />
