--- a/poll_app/app/templates/home.html
+++ b/poll_app/app/templates/home.html
@@ -53,6 +53,10 @@
 <br>
 <div class="wrapper">
     <h4 class="welcome">Welcome <i class="username">{{user.email}}</i></h4>
+    <form>
+        <input type="search-poll" name="q" placeholder="Search...">
+        <button type="search-submit">Search</button>
+    </form>
     {% block wrapper %}
     {% endblock %}
 </div>
