per option analysis

--- a/poll_app/app/templates/analysis.html
+++ b/poll_app/app/templates/analysis.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
 {% block body %}
-<img src="data:image/png;base64, {{plot_img}}" alt="plt">
-<!--
-    {% for plot in option_gender_dist_plots %}
-    <img src="data:image/png;base64, {{plot}}" alt="plt">
-    {% endfor %}
--->
+<h1>Analysis of {{poll_title}}<h1>
+<hr>
+<img src="data:image/png;base64, {{plot_img}}" alt="plt"><br>
+{% for plot in option_gender_dist_plots %}
+    <img src="data:image/png;base64, {{plot}}" alt="plt"><br>
+{% endfor %}
 {% endblock %}
