--- a/poll_app/app/static/poll.css
+++ b/poll_app/app/static/poll.css
@@ -161,3 +161,16 @@ td {
   margin-right: 15px
 }
 
+.share-analysis {
+  background: #fff;
+  border-radius: 15px;
+  margin-left: 50px;
+  margin-right: 50px;
+  width: 80%;
+  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.1);
+}
+
+.share-analysis header {
+  font-size: 22px;
+  font-weight: 600;
+}
