--- a/poll_app/app/templates/my_polls.html
+++ b/poll_app/app/templates/my_polls.html
@@ -16,7 +16,7 @@
             <td class='col-sm-5'><a href="{{ url_for('poll', poll_id=poll.id) }}">{{ poll.title }}</a></td>
             <td class='col-sm-1'>{{ poll.vote_count}}</td>
             <td class='col-sm-1'>{{ poll.creator_username}} </td>
-            <td class='col-sm-3'>{{ poll.created_at.strftime('%B %d, %Y at %I:%M %p')}} </td>
+            <td class='col-sm-3'>{{ poll.created_at.strftime('%B %d, %Y %I:%M %p')}} </td>
             <td class="col-sm-1"><a class="text-danger" href="{{url_for('delete_poll', poll_id=poll.id)}}">delete</a></td>
             <td class="col-sm-1"><a href="{{url_for('share_poll', poll_id=poll.id)}}">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-share" viewBox="0 0 16 16">
