--- a/poll_app/app/templates/share_poll.html
+++ b/poll_app/app/templates/share_poll.html
@@ -1,20 +1,26 @@
 {% extends 'base.html' %}
 {% block body %}
-<div class="wrapper">
-    <header style="justify-items: left;">
-        <a href="{{ url_for('home') }}" class="button">
+<link rel="stylesheet" href="{{ url_for('static', filename='poll.css') }}" type="text/css"/>
+<div class="share-analysis">
+    <header style="margin-top: 30px; justify-items: left;">
+        <a href="{{ url_for('my_polls') }}" class="button">
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-bar-left" viewBox="0 0 16 16">
                 <path fill-rule="evenodd" d="M12.5 15a.5.5 0 0 1-.5-.5v-13a.5.5 0 0 1 1 0v13a.5.5 0 0 1-.5.5M10 8a.5.5 0 0 1-.5.5H3.707l2.147 2.146a.5.5 0 0 1-.708.708l-3-3a.5.5 0 0 1 0-.708l3-3a.5.5 0 1 1 .708.708L3.707 7.5H9.5a.5.5 0 0 1 .5.5"/>
               </svg>
-              &ensp;Home</a>
+              &ensp;My Polls</a>
+        
+        <a href="{{ url_for('home') }}" class="button">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-house" viewBox="0 0 16 16">
+                <path d="M8.707 1.5a1 1 0 0 0-1.414 0L.646 8.146a.5.5 0 0 0 .708.708L2 8.207V13.5A1.5 1.5 0 0 0 3.5 15h9a1.5 1.5 0 0 0 1.5-1.5V8.207l.646.647a.5.5 0 0 0 .708-.708L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293zM13 7.207V13.5a.5.5 0 0 1-.5.5h-9a.5.5 0 0 1-.5-.5V7.207l5-5z"/>
+            </svg>
+            &ensp;Home</a>
     </header>
     <br>
     <div style="justify-items: center;">
-    <link rel="stylesheet" href="{{ url_for('static', filename='poll.css') }}" type="text/css"/>
        <input style="cursor:default;" type="text" value="{{url}}" id="link" readonly>
        <button style="margin-left:10px; padding: 5px;" class="btn btn-info" onclick="copy_to_clipboard()">Copy Link</button>
        <hr style="width:90%;">
-       <img src="data:image/png;base64, {{qr_img_bytes}}" style="margin-top:-10px;" alt="QR Code">
+       <img width="350" height="350" src="data:image/png;base64, {{qr_img_bytes}}" style="margin-top:-15px;" alt="QR Code">
     </div>
 </div>
 {% endblock %}
@@ -28,7 +34,7 @@ function copy_to_clipboard() {
   
     navigator.clipboard.writeText(copyText.value);
   
-    alert("Copied the text: " + copyText.value);
+    alert("Copied to Clipboard: " + copyText.value);
 }
 </script>
 {% endblock %}
