--- a/poll_app/app/static/home.css
+++ b/poll_app/app/static/home.css
@@ -128,3 +128,11 @@ td a:hover {
   color: white;
   cursor: pointer;
 }
+
+.search-button {
+  margin-top: -5px;
+  margin-left: 5px;
+  padding: .25rem .5rem;
+  color:white;
+  background-color: #21a89f;
+}
