--- a/poll_app/app/templates/admin_home.html
+++ b/poll_app/app/templates/admin_home.html
@@ -17,7 +17,7 @@
     <a href="{{url_for('my_votes')}}">My Voting History</a>
     <a href="{{ url_for('create_poll') }}">Create New Poll</a>
     {% if user.is_admin %}
-    <a href="{{ url_for('admin_polls') }}">Admin Panel</a>
+    <a href="{{ url_for('admin_users') }}">Admin Panel</a>
     {% endif %}
     <a href="{{url_for('logout')}}">Log Out</a>
     <hr>
@@ -43,11 +43,11 @@
 
 <br>
 <div class="wrapper">
-    <h4 class="welcome">Welcome <i class="username">{{user.email}}</i></h4>
-    <form>
+    <h4 class="welcome">Welcome <i class="username">{{user.email}}</i></h4><br>
+    <div style="margin-left: 5.2rem;">
         <input type="search-poll" name="q" placeholder="Search...">
-        <button type="search-submit">Search</button>
-    </form>
+        <button type="search-submit" class="btn search-button">Search</button>
+    </div>
         {% block wrapper %}
         {% endblock %}
 </div>
