--- a/poll_app/app/templates/admin_polls.html
+++ b/poll_app/app/templates/admin_polls.html
@@ -17,7 +17,11 @@
             <td class='col-sm-1'>{{ poll.creator_username}} </td>
             <td class='col-sm-3'>{{ poll.created_at.strftime('%B %d, %Y at %I:%M %p')}} </td>
             <td class="col-sm-1"><a class="text-danger" href="{{url_for('delete_poll', poll_id=poll.id)}}">delete</a></td>
-            <td class="col-sm-1"><a href="{{url_for('share_poll', poll_id=poll.id)}}">share</a></td>
+            <td class="col-sm-1"><a href="{{url_for('share_poll', poll_id=poll.id)}}">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-share" viewBox="0 0 16 16">
+                    <path d="M13.5 1a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3M11 2.5a2.5 2.5 0 1 1 .603 1.628l-6.718 3.12a2.5 2.5 0 0 1 0 1.504l6.718 3.12a2.5 2.5 0 1 1-.488.876l-6.718-3.12a2.5 2.5 0 1 1 0-3.256l6.718-3.12A2.5 2.5 0 0 1 11 2.5m-8.5 4a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3m11 5.5a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3"/>
+                </svg>
+            </a></td>
         </tr>
         {% endfor %}
     </table>
