--- a/poll_app/app/templates/home.html
+++ b/poll_app/app/templates/home.html
@@ -52,11 +52,11 @@
 </nav>
 <br>
 <div class="wrapper">
-    <h4 class="welcome">Welcome <i class="username">{{user.email}}</i></h4>
-    <form>
+    <h4 class="welcome">Welcome <i class="username">{{user.email}}</i></h4><br>
+    <div style="margin-left: 5.2rem;">
         <input type="search-poll" name="q" placeholder="Search...">
-        <button type="search-submit">Search</button>
-    </form>
+        <button type="search-submit" class="btn search-button">Search</button>
+    </div>
     {% block wrapper %}
     {% endblock %}
 </div>
