--- a/poll_app/app/templates/admin_users.html
+++ b/poll_app/app/templates/admin_users.html
@@ -18,6 +18,8 @@
             <td class="col-sm-1">
             {% if not user.is_admin %}
                 <a class="text-danger" href="{{url_for('admin_delete', user_id=user.id)}}">delete</a>
+                {% else %}
+                NA
             {% endif %}
             </td>
         </tr>
