--- a/poll_app/app/templates/custom_polls.html
+++ b/poll_app/app/templates/custom_polls.html
@@ -15,9 +15,18 @@
             <td class='col-sm-1'>{{ poll.vote_count}}</td>
             <td class='col-sm-1'>{{ poll.creator_username}}</td>
             <td class='col-sm-3'>{{ poll.created_at.strftime('%B %d, %Y at %I:%M %p')}}</td>
-            {% if user.id != poll.user_id %}
-            <td class='col-sm-1'><a class="text-danger" href="{{url_for('report', poll_id=poll.id)}}">Report</a></td>
-            {% endif %}
+            <td class='col-sm-1'>
+                {% if user.id != poll.user_id %}
+                <a class="text-danger" href="{{url_for('report', poll_id=poll.id)}}">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-exclamation-triangle" viewBox="0 0 16 16">
+                        <path d="M7.938 2.016A.13.13 0 0 1 8.002 2a.13.13 0 0 1 .063.016.15.15 0 0 1 .054.057l6.857 11.667c.036.06.035.124.002.183a.2.2 0 0 1-.054.06.1.1 0 0 1-.066.017H1.146a.1.1 0 0 1-.066-.017.2.2 0 0 1-.054-.06.18.18 0 0 1 .002-.183L7.884 2.073a.15.15 0 0 1 .054-.057m1.044-.45a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767z"/>
+                        <path d="M7.002 12a1 1 0 1 1 2 0 1 1 0 0 1-2 0M7.1 5.995a.905.905 0 1 1 1.8 0l-.35 3.507a.552.552 0 0 1-1.1 0z"/>
+                    </svg>
+                </a>
+                {% else %}
+                    NA
+                {% endif %}
+            </td>
         </tr>
         {% endfor %}
     </table>
