Change Icons, Resolve Runtime Error, Fix width for Analysis

--- a/poll_app/app/templates/analysis.html
+++ b/poll_app/app/templates/analysis.html
@@ -22,7 +22,7 @@
         <hr style="width:90%;">
         <img width="450" src="data:image/png;base64, {{plot_img}}" style="margin-top:-15px;" alt="plt"><br>
         {% for plot in option_gender_dist_plots %}
-            <img src="data:image/png;base64, {{plot}}" alt="plt"><br>
+            <img width="450" src="data:image/png;base64, {{plot}}" alt="plt"><br>
         {% endfor %}
     </div>
 </div>
