--- a/poll_app/app/templates/home.html
+++ b/poll_app/app/templates/home.html
@@ -25,7 +25,7 @@
         {% endif %}
         <a href="{{url_for('logout')}}">Log Out</a>
         <hr>
-        <a class="text-danger" href="{{url_for('delete_account')}}"> Delete Account </a>
+        <a class="text-danger" onclick="return confirm('Are you sure?')" href="{{url_for('delete_account')}}"> Delete Account </a>
     </div>
     <script>
 
