--- a/poll_app/app/templates/my_polls.html
+++ b/poll_app/app/templates/my_polls.html
@@ -17,21 +17,21 @@
             <td class='col-sm-1'>{{ poll.vote_count}}</td>
             <td class='col-sm-1'>{{ poll.creator_username}} </td>
             <td class='col-sm-3'>{{ poll.created_at.strftime('%B %d, %Y %I:%M %p')}} </td>
-            <td class="col-sm-1"><a class="text-danger" href="{{url_for('delete_poll', poll_id=poll.id)}}">delete</a></td>
+            <td class="col-sm-1"><a class="text-danger" onclick="return confirm('Are you sure?')" href="{{url_for('delete_poll', poll_id=poll.id)}}">delete</a></td>
             <td class="col-sm-1"><a href="{{url_for('share_poll', poll_id=poll.id)}}">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-share" viewBox="0 0 16 16">
                     <path d="M13.5 1a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3M11 2.5a2.5 2.5 0 1 1 .603 1.628l-6.718 3.12a2.5 2.5 0 0 1 0 1.504l6.718 3.12a2.5 2.5 0 1 1-.488.876l-6.718-3.12a2.5 2.5 0 1 1 0-3.256l6.718-3.12A2.5 2.5 0 0 1 11 2.5m-8.5 4a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3m11 5.5a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3"/>
-                  </svg>
+                </svg>
             </a></td>
             <td class="col-sm-1"><a href="{{url_for('analyse', poll_id=poll.id)}}">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-clipboard2-data" viewBox="0 0 16 16">
                     <path d="M9.5 0a.5.5 0 0 1 .5.5.5.5 0 0 0 .5.5.5.5 0 0 1 .5.5V2a.5.5 0 0 1-.5.5h-5A.5.5 0 0 1 5 2v-.5a.5.5 0 0 1 .5-.5.5.5 0 0 0 .5-.5.5.5 0 0 1 .5-.5z"/>
                     <path d="M3 2.5a.5.5 0 0 1 .5-.5H4a.5.5 0 0 0 0-1h-.5A1.5 1.5 0 0 0 2 2.5v12A1.5 1.5 0 0 0 3.5 16h9a1.5 1.5 0 0 0 1.5-1.5v-12A1.5 1.5 0 0 0 12.5 1H12a.5.5 0 0 0 0 1h.5a.5.5 0 0 1 .5.5v12a.5.5 0 0 1-.5.5h-9a.5.5 0 0 1-.5-.5z"/>
                     <path d="M10 7a1 1 0 1 1 2 0v5a1 1 0 1 1-2 0zm-6 4a1 1 0 1 1 2 0v1a1 1 0 1 1-2 0zm4-3a1 1 0 0 0-1 1v3a1 1 0 1 0 2 0V9a1 1 0 0 0-1-1"/>
-                  </svg>
+                </svg>
             </a></td>
         </tr>
         {% endfor %}
     </table>
     </div>
-{% endblock %} 
+{% endblock %}
