--- a/poll_app/app/templates/admin_home.html
+++ b/poll_app/app/templates/admin_home.html
@@ -45,8 +45,10 @@
 <div class="wrapper">
     <h4 class="welcome">Welcome <i class="username">{{user.email}}</i></h4><br>
     <div style="margin-left: 5.2rem;">
+    <form>
         <input type="search-poll" name="q" placeholder="Search...">
         <button type="search-submit" class="btn search-button">Search</button>
+    </form>
     </div>
         {% block wrapper %}
         {% endblock %}
