--- a/poll_app/app/templates/custom_polls.html
+++ b/poll_app/app/templates/custom_polls.html
@@ -1,7 +1,7 @@
 {% extends 'home.html' %}
 {% block wrapper %}
 <div class="m-5">
-    {% if recommended_polls is not none %}
+    {% if recommended_polls %}
     Recommended Polls
         <table class="table">
             <tr>
